@@ -1,0 +1,3 @@
+  <div class="log_output ruby">
+    <%= highlight_syntax recipe.body %>
+  </div>
