@@ -18,7 +18,7 @@ ActionController::Routing::Routes.draw do |map|
   map.connect ':controller/service.wsdl', :action => 'wsdl'
   
   map.resources :hosts
-  map.resources :recipes
+  map.resources :recipes, :collection => {:preview => :get}
   map.resources :projects, :member => {:dashboard => :get} do |projects|
     projects.resources :project_configurations
     
